feat: user collections retrieval
