# packages/server/docs/swagger.json
@@ -1621,6 +1621,26 @@
                 "responses": {}
             }
         },
+        "/users/{id}/collections": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/users/{id}/follow": {
             "post": {
                 "security": [
